# gowork_web

./: job_search.spec  launcher.py  pyproject.toml  requirements.txt  vercel.json
api/: index.py
backend/job_search_agent/: main.py  schemas.py  storage.py
backend/job_search_agent/routers/: cards.py  files.py
docs/: UAT验收清单.md  部署到Vercel-持久化.md
docs/superpowers/plans/: 2026-06-06-kanban-exe.md
docs/superpowers/specs/: 2026-06-06-kanban-exe-design.md
frontend/: app.js  index.html  package-lock.json  package.json  styles.css  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: AnalysisForm.tsx  AnalysisReport.tsx  InterviewChat.tsx  InterviewSummary.tsx  JobDetailPanel.tsx  JobScrapeBoard.tsx  JobScrapeCard.tsx  KanbanBoard.tsx  KanbanColumn.tsx  Layout.tsx  LoadingSpinner.tsx  MobileNav.tsx  PositionCard.tsx  PositionCompare.tsx  PositionDetail.tsx  RewritePanel.tsx  ScraperSearch.tsx  ShortcutHelp.tsx  Sidebar.tsx  Toast.tsx
frontend/src/context/: AuthContext.tsx  auth-context.ts
frontend/src/hooks/: useShortcuts.ts  useTheme.ts
frontend/src/pages/: AnalysisPage.tsx  BoardPage.tsx  ComparePage.tsx  InterviewHistoryPage.tsx  InterviewPage.tsx  InterviewPrepPage.tsx  LoginPage.tsx  RegisterPage.tsx  ScraperPage.tsx  SettingsPage.tsx
frontend/src/types/: index.ts
frontend/src/utils/: toast.ts
tests/: conftest.py  test_cards.py  test_files.py  test_schemas.py  test_storage.py
