[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "job-search-kanban"
version = "0.2.0"
description = "Local-first job search kanban with drag-and-drop and file attachments."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "python-multipart>=0.0.9",
  # Cloud-only (Vercel installs deps from this file via uv). Linux marker keeps
  # them off local Windows / the PyInstaller .exe, where they are unused and
  # libsql has no wheel. See backend/job_search_agent/storage.py (lazy import).
  "libsql>=0.1.11; sys_platform == 'linux'",
  "vercel_blob>=0.4.2; sys_platform == 'linux'",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]
build = [
  "pyinstaller>=6.0.0",
]

[tool.setuptools]
package-dir = {"" = "backend"}

[tool.setuptools.packages.find]
where = ["backend"]

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
